[package]
name = "pycoverm"
version = "0.6.0"
authors = ["Antonio Camargo <antoniop.camargo@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/apcamargo/pycoverm"
keywords = ["bioinformatics"]

[lib]
name = "pycoverm"
crate-type = ["cdylib"]

[dependencies]
coverm = "0.6.0"
ndarray = "0.13.1"
numpy = "0.12.1"
pyo3 = { version = "0.12.4", features = ["extension-module"] }
rust-htslib = "0.36.0"

[package.metadata.maturin]
requires-dist = ["numpy"]
