[package]
name = "pycoverm"
version = "0.6.0"
authors = ["Antonio Camargo <antoniop.camargo@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/apcamargo/pycoverm"
keywords = ["bioinformatics"]

[lib]
name = "pycoverm"
crate-type = ["cdylib"]

[dependencies]
coverm = "0.7.0"
ndarray = "0.15.6"
numpy = "0.20.0"
pyo3 = { version = "0.20", features = ["extension-module"] }
rust-htslib = "0.45.0"
