[package]
name = "pycoverm"
version = "0.6.2"
edition = "2021"
authors = ["Antonio Camargo <antoniop.camargo@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/apcamargo/pycoverm"
keywords = ["bioinformatics"]

[lib]
name = "pycoverm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.3"
coverm = "0.7.0"
ndarray = "0.15.6"
numpy = "0.20.0"
rust-htslib = { version = "0.45.0", default-features = false }
