[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pycoverm"
requires-python = ">=3.8"
dependencies = ["numpy>=1.16,<3"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
